Add FuncType and clean up a bit

--- a/LoonyC/LoonyC.csproj
+++ b/LoonyC/LoonyC.csproj
@@ -50,12 +50,13 @@
     <Compile Include="Compiler\CompilerError.cs" />
     <Compile Include="Compiler\CompilerException.cs" />
     <Compile Include="Compiler\ExpressionPrintVisitor.cs" />
-    <Compile Include="Compiler\Expressions\BinaryOperatorExpression.cs" />
-    <Compile Include="Compiler\Expressions\FuncExpression.cs" />
-    <Compile Include="Compiler\Expressions\IDeclarationExpression.cs" />
-    <Compile Include="Compiler\Expressions\NumberExpression.cs" />
-    <Compile Include="Compiler\Expressions\StructExpression.cs" />
+    <Compile Include="Compiler\CodeGenerator\Expressions\BinaryOperatorExpression.cs" />
+    <Compile Include="Compiler\CodeGenerator\Expressions\FuncExpression.cs" />
+    <Compile Include="Compiler\CodeGenerator\Expressions\IDeclarationExpression.cs" />
+    <Compile Include="Compiler\CodeGenerator\Expressions\NumberExpression.cs" />
+    <Compile Include="Compiler\CodeGenerator\Expressions\StructExpression.cs" />
     <Compile Include="Compiler\ExpressionVisitor.cs" />
+    <Compile Include="Compiler\IExpressionVisitor.cs" />
     <Compile Include="Compiler\LoonyParser.cs" />
     <Compile Include="Compiler\Parselets\BinaryOperatorParselet.cs" />
     <Compile Include="Compiler\Parselets\GroupParselet.cs" />
@@ -63,16 +64,17 @@
     <Compile Include="Compiler\CodeGenerator\Scope.cs" />
     <Compile Include="Compiler\Types\AnyType.cs" />
     <Compile Include="Compiler\Types\ArrayType.cs" />
+    <Compile Include="Compiler\Types\FuncType.cs" />
     <Compile Include="Compiler\Types\PointerType.cs" />
     <Compile Include="Compiler\Types\PrimitiveType.cs" />
     <Compile Include="Compiler\Types\StructType.cs" />
     <Compile Include="Compiler\Types\TypeBase.cs" />
     <Compile Include="Compiler\Types\TypeModifier.cs" />
     <Compile Include="CoreAnnotations.cs" />
-    <Compile Include="Compiler\Expressions\Expression.cs" />
-    <Compile Include="Compiler\Expressions\IBlockExpression.cs" />
-    <Compile Include="Compiler\Expressions\IStatementExpression.cs" />
-    <Compile Include="Compiler\Expressions\Statements\BlockExpression.cs" />
+    <Compile Include="Compiler\CodeGenerator\Expressions\Expression.cs" />
+    <Compile Include="Compiler\CodeGenerator\Expressions\IBlockExpression.cs" />
+    <Compile Include="Compiler\CodeGenerator\Expressions\IStatementExpression.cs" />
+    <Compile Include="Compiler\CodeGenerator\Expressions\Statements\BlockExpression.cs" />
     <Compile Include="IndentTextWriter.cs" />
     <Compile Include="Compiler\Lexer.cs" />
     <Compile Include="Compiler\Lexer.Static.cs" />
