Why did I move expressions into the code generator

--- a/LoonyC/LoonyC.csproj
+++ b/LoonyC/LoonyC.csproj
@@ -50,11 +50,11 @@
     <Compile Include="Compiler\CompilerError.cs" />
     <Compile Include="Compiler\CompilerException.cs" />
     <Compile Include="Compiler\ExpressionPrintVisitor.cs" />
-    <Compile Include="Compiler\CodeGenerator\Expressions\BinaryOperatorExpression.cs" />
-    <Compile Include="Compiler\CodeGenerator\Expressions\FuncExpression.cs" />
-    <Compile Include="Compiler\CodeGenerator\Expressions\IDeclarationExpression.cs" />
-    <Compile Include="Compiler\CodeGenerator\Expressions\NumberExpression.cs" />
-    <Compile Include="Compiler\CodeGenerator\Expressions\StructExpression.cs" />
+    <Compile Include="Compiler\Expressions\BinaryOperatorExpression.cs" />
+    <Compile Include="Compiler\Expressions\FuncExpression.cs" />
+    <Compile Include="Compiler\Expressions\IDeclarationExpression.cs" />
+    <Compile Include="Compiler\Expressions\NumberExpression.cs" />
+    <Compile Include="Compiler\Expressions\StructExpression.cs" />
     <Compile Include="Compiler\ExpressionVisitor.cs" />
     <Compile Include="Compiler\IExpressionVisitor.cs" />
     <Compile Include="Compiler\LoonyParser.cs" />
@@ -71,10 +71,10 @@
     <Compile Include="Compiler\Types\TypeBase.cs" />
     <Compile Include="Compiler\Types\TypeModifier.cs" />
     <Compile Include="CoreAnnotations.cs" />
-    <Compile Include="Compiler\CodeGenerator\Expressions\Expression.cs" />
-    <Compile Include="Compiler\CodeGenerator\Expressions\IBlockExpression.cs" />
-    <Compile Include="Compiler\CodeGenerator\Expressions\IStatementExpression.cs" />
-    <Compile Include="Compiler\CodeGenerator\Expressions\Statements\BlockExpression.cs" />
+    <Compile Include="Compiler\Expressions\Expression.cs" />
+    <Compile Include="Compiler\Expressions\IBlockExpression.cs" />
+    <Compile Include="Compiler\Expressions\IStatementExpression.cs" />
+    <Compile Include="Compiler\Expressions\Statements\BlockExpression.cs" />
     <Compile Include="GenericComparer.cs" />
     <Compile Include="IndentTextWriter.cs" />
     <Compile Include="Compiler\Lexer.cs" />
