Start work on parser

--- a/LoonyC/LoonyC.csproj
+++ b/LoonyC/LoonyC.csproj
@@ -51,15 +51,18 @@
     <Compile Include="Compiler\CompilerException.cs" />
     <Compile Include="Compiler\ExpressionPrintVisitor.cs" />
     <Compile Include="Compiler\Expressions\BinaryOperatorExpression.cs" />
-    <Compile Include="Compiler\Expressions\FuncExpression.cs" />
-    <Compile Include="Compiler\Expressions\IDeclarationExpression.cs" />
+    <Compile Include="Compiler\Expressions\Declarations\DocumentExpression.cs" />
+    <Compile Include="Compiler\Expressions\Declarations\FuncExpression.cs" />
+    <Compile Include="Compiler\Expressions\Declarations\IDeclarationExpression.cs" />
     <Compile Include="Compiler\Expressions\NumberExpression.cs" />
-    <Compile Include="Compiler\Expressions\StructExpression.cs" />
+    <Compile Include="Compiler\Expressions\Declarations\StructExpression.cs" />
     <Compile Include="Compiler\ExpressionVisitor.cs" />
     <Compile Include="Compiler\IExpressionVisitor.cs" />
     <Compile Include="Compiler\LoonyParser.cs" />
     <Compile Include="Compiler\Parselets\BinaryOperatorParselet.cs" />
+    <Compile Include="Compiler\Parselets\Declarations\FuncParselet.cs" />
     <Compile Include="Compiler\Parselets\GroupParselet.cs" />
+    <Compile Include="Compiler\Parselets\Declarations\IDeclarationParselet.cs" />
     <Compile Include="Compiler\Parselets\NumberParselet.cs" />
     <Compile Include="Compiler\CodeGenerator\Scope.cs" />
     <Compile Include="Compiler\SourcePosition.cs" />
@@ -73,7 +76,7 @@
     <Compile Include="Compiler\Types\TypeModifier.cs" />
     <Compile Include="CoreAnnotations.cs" />
     <Compile Include="Compiler\Expressions\Expression.cs" />
-    <Compile Include="Compiler\Expressions\IBlockExpression.cs" />
+    <Compile Include="Compiler\Expressions\Statements\IBlockExpression.cs" />
     <Compile Include="Compiler\Expressions\IStatementExpression.cs" />
     <Compile Include="Compiler\Expressions\Statements\BlockExpression.cs" />
     <Compile Include="GenericComparer.cs" />
