Create shared assembly, move lexer core into it

--- a/LoonyC.Assembler/LoonyC.Assembler.csproj
+++ b/LoonyC.Assembler/LoonyC.Assembler.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D0B5B9B3-4454-42BC-8A13-9F8A15C88ED3}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{777916F2-D8AF-40F8-9C49-5EE06424413A}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LoonyC.Tests</RootNamespace>
-    <AssemblyName>LoonyC.Tests</AssemblyName>
+    <RootNamespace>LoonyC.Assembler</RootNamespace>
+    <AssemblyName>LoonyC.Assembler</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,28 +32,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LoonyC.Shared\LoonyC.Shared.csproj">
       <Project>{b66b5820-f22d-49ee-89ac-2032b3883dbd}</Project>
       <Name>LoonyC.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LoonyC\LoonyC.csproj">
-      <Project>{2ab6c616-2c7a-4d0d-97f1-36b22e42b77a}</Project>
-      <Name>LoonyC</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
