--- a/LoonyC.Shared/LoonyC.Shared.csproj
+++ b/LoonyC.Shared/LoonyC.Shared.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D0B5B9B3-4454-42BC-8A13-9F8A15C88ED3}</ProjectGuid>
+    <ProjectGuid>{B66B5820-F22D-49EE-89AC-2032B3883DBD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LoonyC.Tests</RootNamespace>
-    <AssemblyName>LoonyC.Tests</AssemblyName>
+    <RootNamespace>LoonyC.Shared</RootNamespace>
+    <AssemblyName>LoonyC.Shared</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -29,30 +31,24 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types.cs" />
+    <Compile Include="CoreAnnotations.cs" />
+    <Compile Include="GenericComparer.cs" />
+    <Compile Include="IndentTextWriter.cs" />
+    <Compile Include="Lexer\Lexer.cs" />
+    <Compile Include="Lexer\Lexer.Static.cs" />
+    <Compile Include="Lexer\LexerException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LoonyC.Shared\LoonyC.Shared.csproj">
-      <Project>{b66b5820-f22d-49ee-89ac-2032b3883dbd}</Project>
-      <Name>LoonyC.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LoonyC\LoonyC.csproj">
-      <Project>{2ab6c616-2c7a-4d0d-97f1-36b22e42b77a}</Project>
-      <Name>LoonyC</Name>
-    </ProjectReference>
+    <Compile Include="Lexer\SourcePosition.cs" />
+    <Compile Include="Lexer\Token.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
