Reorganize AST stuff

--- a/LoonyC/LoonyC.csproj
+++ b/LoonyC/LoonyC.csproj
@@ -44,22 +44,23 @@
     <Compile Include="Compiler\Assembly\LabelOperand.cs" />
     <Compile Include="Compiler\Assembly\Operand.cs" />
     <Compile Include="Compiler\Assembly\RegisterOperand.cs" />
-    <Compile Include="Compiler\CodeGenerator\ExpressionCompileVisitor.cs" />
-    <Compile Include="Compiler\CodeGenerator\Transforms\ExpressionSimplifyTransform.cs" />
-    <Compile Include="Compiler\CodeGenerator\Transforms\ExpressionTransformVisitor.cs" />
+    <Compile Include="Compiler\CodeGenerator\AstCompileVisitor.cs" />
+    <Compile Include="Compiler\CodeGenerator\Transforms\AstSimplifyTransform.cs" />
+    <Compile Include="Compiler\Ast\AstTransformVisitor.cs" />
     <Compile Include="Compiler\CodeGenerator\Frame.cs" />
     <Compile Include="Compiler\CodeGenerator\FrameResource.cs" />
     <Compile Include="Compiler\CompilerError.cs" />
     <Compile Include="Compiler\CompilerException.cs" />
-    <Compile Include="Compiler\ExpressionPrintVisitor.cs" />
-    <Compile Include="Compiler\Expressions\BinaryOperatorExpression.cs" />
-    <Compile Include="Compiler\Expressions\Declarations\DocumentExpression.cs" />
-    <Compile Include="Compiler\Expressions\Declarations\FuncExpression.cs" />
-    <Compile Include="Compiler\Expressions\Declarations\IDeclarationExpression.cs" />
-    <Compile Include="Compiler\Expressions\NumberExpression.cs" />
-    <Compile Include="Compiler\Expressions\Declarations\StructExpression.cs" />
-    <Compile Include="Compiler\ExpressionVisitor.cs" />
-    <Compile Include="Compiler\IExpressionVisitor.cs" />
+    <Compile Include="Compiler\Ast\AstPrintVisitor.cs" />
+    <Compile Include="Compiler\Ast\Expressions\BinaryOperatorExpression.cs" />
+    <Compile Include="Compiler\Ast\Document.cs" />
+    <Compile Include="Compiler\Ast\Declarations\FuncDeclaration.cs" />
+    <Compile Include="Compiler\Ast\Declarations\Declaration.cs" />
+    <Compile Include="Compiler\Ast\Expressions\NumberExpression.cs" />
+    <Compile Include="Compiler\Ast\Declarations\StructDeclaration.cs" />
+    <Compile Include="Compiler\Ast\Statements\NakedStatement.cs" />
+    <Compile Include="Compiler\Ast\AstVisitor.cs" />
+    <Compile Include="Compiler\Ast\IAstVisitor.cs" />
     <Compile Include="Compiler\LoonyParser.cs" />
     <Compile Include="Compiler\Parselets\BinaryOperatorParselet.cs" />
     <Compile Include="Compiler\Parselets\Declarations\FuncParselet.cs" />
@@ -75,10 +76,9 @@
     <Compile Include="Compiler\Types\NamedType.cs" />
     <Compile Include="Compiler\Types\TypeBase.cs" />
     <Compile Include="Compiler\Types\TypeModifier.cs" />
-    <Compile Include="Compiler\Expressions\Expression.cs" />
-    <Compile Include="Compiler\Expressions\Statements\IBlockExpression.cs" />
-    <Compile Include="Compiler\Expressions\Statements\IStatementExpression.cs" />
-    <Compile Include="Compiler\Expressions\Statements\BlockExpression.cs" />
+    <Compile Include="Compiler\Ast\Expressions\Expression.cs" />
+    <Compile Include="Compiler\Ast\Statements\Statement.cs" />
+    <Compile Include="Compiler\Ast\Statements\BlockStatement.cs" />
     <Compile Include="Compiler\LoonyLexer.cs" />
     <Compile Include="Compiler\LoonyLexer.Static.cs" />
     <Compile Include="Compiler\Parselets\IInfixParselet.cs" />
