--- a/LoonyC/LoonyC.csproj
+++ b/LoonyC/LoonyC.csproj
@@ -39,12 +39,18 @@
   <ItemGroup>
     <Compile Include="Compiler\Assembly\Assembler.cs" />
     <Compile Include="Compiler\Assembly\AssemblerContext.cs" />
-    <Compile Include="Compiler\Assembly\FrameOperand.cs" />
-    <Compile Include="Compiler\Assembly\ImmediateOperand.cs" />
-    <Compile Include="Compiler\Assembly\Instruction.cs" />
-    <Compile Include="Compiler\Assembly\LabelOperand.cs" />
-    <Compile Include="Compiler\Assembly\Operand.cs" />
-    <Compile Include="Compiler\Assembly\RegisterOperand.cs" />
+    <Compile Include="Compiler\Assembly\Operands\DeferredImmediateOperand.cs" />
+    <Compile Include="Compiler\Assembly\Operands\FrameOperand.cs" />
+    <Compile Include="Compiler\Assembly\Operands\ImmediateOperand.cs" />
+    <Compile Include="Compiler\Assembly\Instructions\CommentInstruction.cs" />
+    <Compile Include="Compiler\Assembly\Instructions\ConditionalInstruction.cs" />
+    <Compile Include="Compiler\Assembly\Instructions\Instruction.cs" />
+    <Compile Include="Compiler\Assembly\Instructions\LabelInstruction.cs" />
+    <Compile Include="Compiler\Assembly\Operands\LabelOperand.cs" />
+    <Compile Include="Compiler\Assembly\Opcode.cs" />
+    <Compile Include="Compiler\Assembly\Operands\Operand.cs" />
+    <Compile Include="Compiler\Assembly\Register.cs" />
+    <Compile Include="Compiler\Assembly\Operands\RegisterOperand.cs" />
     <Compile Include="Compiler\Ast\Statements\ReturnStatement.cs" />
     <Compile Include="Compiler\CodeGenerator\AstCompileVisitor.cs" />
     <Compile Include="Compiler\CodeGenerator\Transforms\AstSimplifyTransform.cs" />
@@ -100,6 +106,7 @@
       <Name>LoonyC.Shared</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
